--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Teacher's Resource Builder</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      /* Base print styles */
       @media print {
         body * {
           visibility: hidden;
@@ -19,10 +20,109 @@
           left: 0;
           top: 0;
           width: 100%;
+          padding: 0;
+          margin: 0;
         }
         .no-print {
           display: none;
         }
+        /* Document-specific print styles */
+        .resource-document {
+          box-shadow: none !important;
+          border: none !important;
+          padding: 0 !important;
+          border-radius: 0 !important;
+          background-color: white !important;
+          color: black !important;
+        }
+        .resource-document h1, .resource-document h2, .resource-document h3 {
+          color: black !important;
+        }
+      }
+
+      /* Custom styles for the resource document output */
+      .resource-document {
+        background-color: white;
+        padding: 2.5rem 3rem;
+        border-radius: 0.5rem;
+        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        border: 1px solid #e2e8f0; /* slate-200 */
+        color: #334155; /* slate-700 */
+      }
+
+      .dark .resource-document {
+          background-color: #1e293b; /* slate-800 */
+          border-color: #334155; /* slate-700 */
+          color: #cbd5e1; /* slate-300 */
+      }
+
+      .resource-document h1, .resource-document h2, .resource-document h3, .resource-document h4 {
+        color: #1e293b; /* slate-800 */
+      }
+
+      .dark .resource-document h1, .dark .resource-document h2, .dark .resource-document h3, .dark .resource-document h4 {
+        color: #f1f5f9; /* slate-100 */
+      }
+
+      .resource-document h1 {
+          font-size: 1.875rem; /* 30px */
+          line-height: 2.25rem; /* 36px */
+          font-weight: 700;
+          border-bottom: 2px solid #e2e8f0; /* slate-200 */
+          padding-bottom: 0.5rem;
+          margin-bottom: 1.5rem;
+      }
+      .dark .resource-document h1 {
+          border-color: #475569; /* slate-600 */
+      }
+
+      .resource-document h2 {
+          font-size: 1.5rem; /* 24px */
+          line-height: 2rem; /* 32px */
+          font-weight: 600;
+          margin-top: 2rem;
+          margin-bottom: 1rem;
+      }
+
+      .resource-document h3 {
+          font-size: 1.25rem; /* 20px */
+          line-height: 1.75rem; /* 28px */
+          font-weight: 600;
+          margin-top: 1.5rem;
+          margin-bottom: 0.75rem;
+      }
+
+      .resource-document p {
+          line-height: 1.75;
+          margin-bottom: 1.25rem;
+      }
+
+      .resource-document ul, .resource-document ol {
+          padding-left: 1.75rem;
+          margin-bottom: 1.25rem;
+      }
+
+      .resource-document li {
+          margin-bottom: 0.5rem;
+          padding-left: 0.5rem;
+      }
+
+      .resource-document strong {
+        font-weight: 600;
+        color: #0f172a; /* slate-900 */
+      }
+
+      .dark .resource-document strong {
+        color: #f8fafc; /* slate-50 */
+      }
+
+      .resource-document hr {
+          margin-top: 2rem;
+          margin-bottom: 2rem;
+          border-color: #e2e8f0; /* slate-200 */
+      }
+      .dark .resource-document hr {
+          border-color: #475569; /* slate-600 */
       }
     </style>
   <script type="importmap">
